crates/parser/src/tests/snapshots/func_def_bad_12.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "fn a(b:)"
- Err:
    message: "Expecting prototype type annotation. Got `CloseParen`"
    line: 1
    column: 8
- "Expecting prototype type annotation. Got `CloseParen` at 1:8"

