crates/parser/src/tests/snapshots/func_def_bad_13.snap
---
source: crates/parser/src/tests.rs
assertion_line: 157
expression: "(test[1], ast, ast_string)"
---
- fn a(b)
- Err:
    message: "Expecting `:` after identifier in `prototype` typed declaration. Got `CloseParen`"
    line: 1
    column: 7
- "Parsing error: Expecting `:` after identifier in `prototype` typed declaration. Got `CloseParen` at 1:7"

