crates/parser/src/tests/snapshots/func_def_bad_2.snap
---
source: crates/parser/src/tests.rs
assertion_line: 157
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int) -> { b }"
- Err:
    message: "Expecting prototype type annotation. Got `OpenBrace`"
    line: 1
    column: 17
- "Parsing error: Expecting prototype type annotation. Got `OpenBrace` at 1:17"

