crates/parser/src/tests/snapshots/func_def_bad_3.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int) -> not_a_type { b }"
- Ok:
    nodes:
      - Fn:
          proto:
            name: a
            args:
              - - b
                - int
            ret_ty: not_a_type
            is_extern: false
          body:
            Block:
              list:
                - Ident:
                    name: b
- "(define (a b:int) '(b))"

