crates/parser/src/tests/snapshots/func_def_bad_4.snap
---
source: crates/parser/src/tests.rs
assertion_line: 152
expression: "(test[1], ast, ast_string)"
---
- fn a
- Err:
    message: "Expecting '(' in prototype. Got EOF"
    line: 0
    column: 0
- "Parsing error: Expecting '(' in prototype. Got EOF"

