crates/parser/src/tests/snapshots/func_def_bad_5.snap
---
source: crates/parser/src/tests.rs
assertion_line: 157
expression: "(test[1], ast, ast_string)"
---
- "fn a( {}"
- Err:
    message: "Expecting identifier or `)` in `prototype` typed declaration. Got `OpenBrace`"
    line: 1
    column: 7
- "Parsing error: Expecting identifier or `)` in `prototype` typed declaration. Got `OpenBrace` at 1:7"

