crates/parser/src/tests/snapshots/func_def_bad_7.snap
---
source: crates/parser/src/tests.rs
assertion_line: 157
expression: "(test[1], ast, ast_string)"
---
- "fn a(b: int b: int)"
- Err:
    message: "Expecting ',' or ')' in prototype. Got `identifier: b`"
    line: 1
    column: 13
- "Parsing error: Expecting ',' or ')' in prototype. Got `identifier: b` at 1:13"

