crates/parser/src/tests/snapshots/func_def_bad_8.snap
---
source: crates/parser/src/tests.rs
assertion_line: 157
expression: "(test[1], ast, ast_string)"
---
- fn a(
- Err:
    message: "Expecting '{' to start block. Got `EOF`"
    line: 0
    column: 0
- "Parsing error: Expecting '{' to start block. Got `EOF`"

