crates/parser/src/tests/snapshots/func_def_bad_9.snap
---
source: crates/parser/src/tests.rs
assertion_line: 152
expression: "(test[1], ast, ast_string)"
---
- "fn a(a: int, {}"
- Err:
    message: "Expecting ')' or identifier in prototype. Got OpenBrace"
    line: 1
    column: 14
- "Parsing error: Expecting ')' or identifier in prototype. Got OpenBrace at 1:14"

