crates/parser/src/tests/snapshots/func_def_empty.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "fn a() {}"
- Ok:
    nodes:
      - Stmt:
          Fn:
            proto:
              name: a
              args: []
              ret_ty: ~
              is_extern: false
            body:
              Expr:
                Block:
                  list: []
                  ty: ~
- "(define (a) '()))"

