crates/parser/src/tests/snapshots/func_def_multi_arg.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "\nfn (a: int, c: int) {\n    1 + 2\n}\n"
- Err:
    message: "Expecting function name in prototype. Got `OpenParen`"
    line: 2
    column: 4
- "Expecting function name in prototype. Got `OpenParen` at 2:4"

