crates/parser/src/tests/snapshots/func_def_multi_expr.snap
---
source: crates/parser/src/tests.rs
assertion_line: 163
expression: "(test[1], ast, ast_string)"
---
- "\nfn a(b: int, c: int) -> int {\n    19 + a + 40\n    b + a\n}\n"
- Ok:
    nodes:
      - node:
          Fn:
            proto:
              name: a
              args:
                - - b
                  - Int32
                - - c
                  - Int32
              ret_ty: Int32
              is_extern: false
            body:
              node:
                Block:
                  list:
                    - node:
                        BinOp:
                          op: Add
                          lhs:
                            node:
                              BinOp:
                                op: Add
                                lhs:
                                  node:
                                    Lit:
                                      value:
                                        UInt64: 19
                                rhs:
                                  node:
                                    Ident:
                                      name: a
                          rhs:
                            node:
                              Lit:
                                value:
                                  UInt64: 40
                    - node:
                        BinOp:
                          op: Add
                          lhs:
                            node:
                              Ident:
                                name: b
                          rhs:
                            node:
                              Ident:
                                name: a
- "(define (a b:int32 c:int32) '((+ (+ 19 a) 40) (+ b a)))"

